service.yml
# kind: Service
# apiVersion: v1
# metadata:
#   name: php-deploy
# spec:
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
apiVersion: v1
kind: Service
metadata:
  name: php-deploy
spec:
  type: LoadBalancer
  selector:
    app: php-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
